[gd_scene load_steps=7 format=2]

[ext_resource path="res://Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://Boss/art/bossFullAmor.png" type="Texture" id=2]
[ext_resource path="res://Boss/Hammer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.449, 32.7144 )

[sub_resource type="CircleShape2D" id=2]
radius = 264.678

[sub_resource type="CircleShape2D" id=3]
radius = 114.426

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.375512, 1.75242 )
scale = Vector2( 2.07179, 2.11091 )
texture = ExtResource( 2 )

[node name="followArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="followArea"]
shape = SubResource( 2 )

[node name="attackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
shape = SubResource( 3 )

[node name="Hammer" parent="." instance=ExtResource( 3 )]
position = Vector2( 45, -30 )
[connection signal="body_entered" from="followArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="followArea" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attackArea_body_entered"]
[connection signal="body_exited" from="attackArea" to="." method="_on_attackArea_body_exited"]
